[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/frosts catch you artti/frost/Nimet√∂n.png" type="Texture" id=1]
[ext_resource path="res://scripts/frost.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.06413, 16.033 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.30717
height = 0.766489

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 699.882, 424.722 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 342.5, 24.2007 )

[node name="frost" type="KinematicBody2D"]
scale = Vector2( 1.20949, 0.826422 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Player Death" type="Area2D" parent="."]
position = Vector2( 27.2842, 19.3606 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Death"]
position = Vector2( -27.3876, -19.0581 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.76837e-07, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="CollisionShape2D"]
wait_time = 0.3
autostart = true

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 1.92488, 3.6112 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.413448, 452.553 )
scale = Vector2( 0.999999, 1 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.65359, -457.393 )
scale = Vector2( 0.999999, 1 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -356.349, -1.21004 )
scale = Vector2( 0.999999, 1 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 355.522, -2.42007 )
scale = Vector2( 0.999999, 1 )
shape = SubResource( 6 )

[connection signal="area_entered" from="Player Death" to="." method="_on_Player_Death_area_entered"]
[connection signal="body_entered" from="Player Death" to="." method="_on_Player_Death_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
